Fix bug where #cards would shrink too small.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px 150px 1fr 50px;
+    grid-template-rows: 150px 150px minmax(300px, 1fr) 50px;
   }
   
 .header {
